# concordia

./: .gitignore  CMakeLists.txt  CONCORDIA_OPTIMAL_MATCH.txt  Doxyfile.in  INSTALL.txt  README.txt  TODO.txt  callgrind.out.3952  cmake.sh  concordia-anubissearch-jrc.sh  concordia-clear-jrc.sh  concordia-concordiasearch-jrc.sh  concordia-index-jrc.sh  concordia-runner-jrc.sh  concordia-runner-large.sh  concordia-runner.sh  concordia-search-jrc.sh  concordia-test-jrc.sh  concordia-test-medium.sh  cpplint.py  getSentenceFromJRC.sh  run-checkers.sh  valgrind.txt
concordia/: CMakeLists.txt  anubis_search_result.cpp  anubis_search_result.hpp  anubis_searcher.cpp  anubis_searcher.hpp  compilation.dox  concordia.cpp  concordia.hpp  concordia_config.cpp  concordia_config.hpp  concordia_exception.cpp  concordia_exception.hpp  concordia_index.cpp  concordia_index.hpp  concordia_search_result.cpp  concordia_search_result.hpp  example.cpp  example.hpp  hash_generator.cpp  hash_generator.hpp  index_searcher.cpp  index_searcher.hpp  interval.cpp  interval.hpp  matched_pattern_fragment.cpp  matched_pattern_fragment.hpp  regex_replacement.cpp  regex_replacement.hpp  running.dox  sentence_anonymizer.cpp  sentence_anonymizer.hpp  substring_occurence.cpp  substring_occurence.hpp  tm_matches.cpp  tm_matches.hpp  word_map.cpp  word_map.hpp
concordia-console/: CMakeLists.txt  concordia-console.cpp
concordia-server/: CMakeLists.txt  TODO.txt  concordia_server.cpp  concordia_server.hpp  main.dox  technical.dox  test.html
concordia-server-starter/: CMakeLists.txt  concordia_server_starter.cpp
concordia-server/t/: CMakeLists.txt
concordia/common/: config.hpp.in  logging.cpp  logging.hpp  text_utils.cpp  text_utils.hpp  utils.cpp  utils.hpp
concordia/t/: CMakeLists.txt  special_casing_converter_tests.cpp  test_anubis_searcher.cpp  test_concordia.cpp  test_concordia_config.cpp  test_concordia_index.cpp  test_example.cpp  test_hash_generator.cpp  test_index_searcher.cpp  test_interval.cpp  test_logging.cpp  test_regex_replacement.cpp  test_sentence_anonymizer.cpp  test_text_utils.cpp  test_tm_matches.cpp  test_utils.cpp  test_word_map.cpp
libdivsufsort/include/: CMakeLists.txt
prod/resources/anonymizer/: named_entities.txt  space_symbols.txt  stop_symbols.txt
prod/resources/concordia-config/: concordia.cfg.in
prod/resources/puddle/: tagset.txt
prod/resources/text-files/: medium.txt  small.txt
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_resources_manager.cpp  test_resources_manager.hpp
tests/resources/anonymizer/: html_tags.txt  named_entities.txt  space_symbols.txt  stop_symbols.txt
tests/resources/concordia-config/: concordia-mock.cfg  concordia-test.cfg  concordia.cfg  concordia.cfg.in  invalid.cfg
tests/resources/puddle/: basic-rules.en.txt  test-rules-bug-1433.en.txt  test-rules.en.txt
tests/unit-tests/: CMakeLists.txt  test_runner.cpp  unit_tests_globals.hpp
utf8case/: CMakeLists.txt  case_converter_factory.hpp
utf8case/t/: CMakeLists.txt  range_based_case_converter_tests.cpp  simple_convert_tests.cpp  special_casing_converter_tests.cpp
